@@ -2,6 +2,7 @@
    modeler, Finite element mesher, Plugin architecture.
 
     Copyright (C) 2003,2004,2005,2006, by EADS CRC
+    Copyright (C) 2007, by EADS France
 
     This library is free software; you can redistribute it and/or
     modify it under the terms of the GNU Lesser General Public
@@ -240,7 +241,9 @@ public class Mesher
 				iFace++;
 				if (numFace != 0 && iFace != numFace)
 					continue;
-				if ((minFace != 0 || maxFace != 0) && (iFace < minFace || iFace > maxFace))
+				if (minFace != 0 && iFace < minFace)
+					continue;
+				if (maxFace != 0 && iFace > maxFace)
 					continue;
 				
 				if (seen.contains(F))
@@ -319,7 +322,9 @@ public class Mesher
 					iFace++;
 					if (numFace != 0 && iFace != numFace)
 						continue;
-					if ((minFace != 0 || maxFace != 0) && (iFace < minFace || iFace > maxFace))
+					if (minFace != 0 && iFace < minFace)
+						continue;
+					if (maxFace != 0 && iFace > maxFace)
 						continue;
 					xmlFile = "jcae2d."+iFace;
 					m2dTo3D.computeRefs(xmlFile);
@@ -332,7 +337,9 @@ public class Mesher
 					iFace++;
 					if (numFace != 0 && iFace != numFace)
 						continue;
-					if ((minFace != 0 || maxFace != 0) && (iFace < minFace || iFace > maxFace))
+					if (minFace != 0 && iFace < minFace)
+						continue;
+					if (maxFace != 0 && iFace > maxFace)
 						continue;
 					xmlFile = "jcae2d."+iFace;
 					logger.info("Importing face "+iFace);
